# composite-object

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
composite_object/: CMakeLists.txt  composite_object.hpp  composite_object_old.hpp
test/: CMakeLists.txt  main.cpp  test.hpp  test_old.hpp
